@@ -13,6 +13,9 @@ shadow-4.1.0 -> shadow-4.1.1						UNRELEASED
 - su
   * su's arguments are now reordered. If needed, use -- to separate su's
     options from the shell's options.
+- lastlog
+  * Accept users specified as a numerical UID, or ranges of users (-user,
+    user-, user1-user2).
 
 shadow-4.0.18.2 -> shadow-4.1.0						09-12-2008
 
